--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 :root {
     --acient-color: #845EC2;
     --bg-color: #4B4453;
